#commit adding idiomatic depenecy for Eslint

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "postcss-css-variables": "^0.17.0",
     "postcss-loader": "^7.0.0",
     "revolver-webpack-plugin": "^1.0.4",
-	  "eslint-webpack-plugin": "^4.1.0",
+    "eslint-config-idiomatic": "^4.0.0",
+    "eslint-webpack-plugin": "^4.1.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-fix-style-only-entries": "^0.6.1",
