--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@born-build-n18/born-build",
+  "name": "born-buid-n18",
   "version": "1.0.4",
-  "description": "Born tool for builds that run on node>= 18",
+  "description": "Born tool for builds that run on node 18",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
