--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "born-buid-n18",
-  "version": "1.0.5",
-  "description": "Born tool for builds that run on node 18",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bogbara-maker/born-build-n18.git"
-  },
+  "name": "commerce-build",
+  "description": "Build tool for Online Storefronts",
   "keywords": [
     "build",
-    "sfra"
+    "tool",
+    "compile",
+    "js",
+    "scss",
+    "webpack",
+    "sfcc",
+    "demandware",
+    "sfra",
+    "storefront",
+    "magento",
+    "e-commerce"
   ],
-  "author": "SFCC Team @borngroup",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bogara-maker/born-build-n18/issues"
+  "version": "1.0.0",
+  "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brian-gonzalez/commerce-build"
   },
-  "homepage": "https://github.com/bogbara-maker/born-build-n18#readme",
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
@@ -27,25 +28,26 @@
     "@babel/preset-env": "^7.12.11",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
-    "css-loader": "^6.0.0",
-    "cssnano": "^6.1.2",
+    "css-loader": "^5.0.1",
+    "cssnano": "^4.1.7",
     "dw-utils": "^1.3.137",
-    "eslint": "^8.57.0",
+    "eslint": "^7.19.0",
+    "eslint-config-idiomatic": "^4.0.0",
+    "eslint-webpack-plugin": "^2.4.3",
     "glob": "^7.1.6",
-    "mini-css-extract-plugin": "^2.7.6",
-    "minimist": "^1.2.6",
-    "sass-loader": "^13.3.2",
-    "sass": "^1.69.7",
+    "mini-css-extract-plugin": "^1.3.5",
+    "minimist": "^1.2.5",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
     "postcss-css-variables": "^0.17.0",
-    "postcss-loader": "^7.0.0",
+    "postcss-loader": "^4.2.0",
     "revolver-webpack-plugin": "^1.0.4",
-    "eslint-config-idiomatic": "^4.0.0",
-    "eslint-webpack-plugin": "^4.1.0",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-fix-style-only-entries": "^0.6.1",
-    "webpack-merge": "^5.10.0"
+    "sass-loader": "^10.1.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-fix-style-only-entries": "^0.1.0",
+    "webpack-merge": "^4.2.1"
   }
 }
+
